--- a/client/package.json
+++ b/client/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "med-cabinet",
+  "name": "water-my-plants",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
-    "cors": "^2.8.5",
-    "formik": "^2.0.4",
-    "jwt-decode": "^2.2.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-redux": "^7.1.3",
+    "formik": "^1.5.8",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^4.4.1",
+    "styled-components": "^4.4.0",
     "uuid": "^3.3.3",
     "yup": "^0.27.0"
   },
