--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "water-my-plants-BE",
+  "name": "water-my-plants-backend",
   "version": "1.0.0",
   "description": "Back End Developers",
   "main": "index.js",
